style(*): correct some spacing in filter styles

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+.filter-module {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+}
+
 .filter-radio {
   left: -50px;
   position: absolute;
